styles/styles.css
/* ... */
.chat-info {
}

video {
  width: 100%    !important;
  height: auto   !important;
}

video.localVideo {
  border: 5px solid #AAA;  
}

.parentCenter {
  max-width: 100%;
  text-align: center;
  position: absolute;
  top:50%;
  bottom: 0;
  left: 0;
  right: 0;
  margin: 0px auto;
}
/*.videoChat {
  position: relative;
  display: inline-block;
  max-width: 100%;
  top: 50%;
  left: 50%;
  position:fixed;
}
*/
.videoChat {
  position: fixed;
  #z-index:100;
  width:100%;
  height:100%;
  left:0;
  top:0;
}
/*
.videoChat video {
  border: 5px solid #AAA; 
}
*/
.myVideo-overlay video {
  max-width: 30%;
  position: absolute;
  top: 10px;
  left: 10px;
}

/*
video.remoteVideo:after {
  content: "\f057"; 
  font-family: FontAwesome;
  color: #fff;
  font-size: 20px;
  position: absolute;
  top: 0px;
  right: 0px;
}
*/

/*
.video-container {
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 30px;
  height: 0;
  overflow: hidden;
}

.video-container iframe,  
.video-container object,  
.video-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
*/

/*
.video {
  border: #7F7F7F solid 4px;
  -webkit-border-radius: 15px;
  -moz-border-radius: 15px;
  border-radius: 15px;
}
 */

/*.comment{
  margin-left:20px;
  margin-bottom:0;
  margin-top:0;
  display:inline-block;
  vertical-align:top;
  -webkit-box-sizing:border-box;
  -moz-box-sizing:border-box;
  box-sizing:border-box;
  *display:inline;
  *zoom:1;
  font-size:14px
}*/




/****************** BUBBLES ******************/
.chat_msgs {
  max-height: 520px;
  overflow-y: scroll;
  border-top: 2px dotted rgb(221, 221, 221);
  padding: 10px 0;
}
.msg_recvd {
  background-color: rgb(118, 118, 118);
  color: rgba(255, 255, 255, .85)!important;
  text-shadow: rgba(0, 0, 0, 0.5) 0px 1px 2px!important;
}
.msg_sent {
  background-color: rgb(207, 240, 158);
}
.chat_msg {
  position: relative;
  background: none;
  margin-top: 10px;
  padding: 0 20px;
}
.chat_user {
/*  width: 60px; */
  position: relative;
  z-index: 10;
}
.msg_sent .chat_user {
  float: right;
}
.msg_recvd .chat_user {
  float: left;
}
.msg_sent .chat_user {
  right: 0;
}
.posted_on, .follower_since {
  font-size: 11px;
}
.posted_on, .msg_single, .follower_single, .follower_since {
  color: rgb(119, 119, 119);
  text-shadow: white 0px 1px 1px;
  clear: both;
}
.msg_sent .posted_on {
  text-align: right;
  clear: right;
}
.chat_msg.msg_sent .chat_copy {
  background-color: rgb(207, 240, 158);
  float: right;
  margin-right: 20px;
}
.chat_msg.msg_recvd .chat_copy {
  margin-left: 20px;
  background: white;
  background: -webkit-gradient(linear, left top, left bottom, from(rgb(243, 243, 243)), color-stop(0.28, rgb(231, 231, 231)), to(rgb(242, 242, 242))) no-repeat rgb(242, 242, 242);
  background: -moz-linear-gradient(top left 90deg, rgb(243, 243, 243) 0%, rgb(231, 231, 231) 28% , rgb(242, 242, 242) 100%);
  background-size: 100% 20px;
}
.chat_msg .chat_copy {
  position: relative;
  max-width: 65%;
  display: inline-block;
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  -moz-box-shadow: rgba(255,255,255,0.6) 0px -1px 0px inset, rgba(0,0,0,0.2) 0px 1px 2px;
  -webkit-box-shadow: rgba(255, 255, 255, 0.6) 0px -1px 0px inset, rgba(0, 0, 0, 0.2) 0px 1px 2px;
  box-shadow: rgba(255, 255, 255, 0.6) 0px -1px 0px inset, rgba(0, 0, 0, 0.2) 0px 1px 2px;
  border: 1px solid rgba(0, 0, 0, 0.55);
  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.1) 28%, transparent 100%);
  background: -moz-linear-gradient(top left 90deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.1) 28% , transparent 100%);
  background-color: rgba(69,159,255,1);
}
.chat_msg .chat_copy:before {
  content: '';
  border-color: transparent rgba(0,0,0,0.55) transparent transparent;
  border-style: solid;
  border-width: 6px;
  height:0;
  width:0;
  position:absolute;
  bottom:-3px;
  left:-5px;
  -webkit-transform: rotate(70deg);
  -moz-transform: rotate(70deg);
}
.chat_msg .chat_copy:after {
  content: '';
  position: absolute;
  top: 0px;
  left: 3px;
  right: 3px;
  border-radius: 5px;
  height: 6px;
  padding: 3px 0;
  background: rgba(255,255,255,0.75);
  background: -webkit-gradient(linear, 0% 0%, 0% 95%, from(white), to(rgba(255, 255, 255, 0.4)));
  background: -webkit-linear-gradient(white, rgba(255, 255, 255, 0.4));
  background: -moz-linear-gradient(white, rgba(255, 255, 255, 0.4));
}
.chat_msg.msg_sent .chat_copy:before {
  border-color: transparent transparent transparent rgba(0,0,0,0.55);
  -webkit-transform: rotate(-70deg);
  -moz-transform: rotate(-70deg);
  left: auto;
  right: -5px;
}
.chat_msg .chat_copy p {
  margin: 0;
  padding: 5px 10px;
  color: #333;
  text-align: left;
  text-shadow: rgba(255, 255, 255, 0.5) 0px 1px 0px;
  position: relative;
  z-index: 10;
}
.chat_msg .chat_copy p:after {
  content: '';
  border-color: transparent #A5FF45 transparent transparent;
  border-style: solid;
  border-width: 6px;
  height:0;
  width:0;
  position:absolute;
  bottom:-1px;
  left:-3px;
  -webkit-transform: rotate(70deg);
  -moz-transform: rotate(70deg);
}
.chat_msg.msg_sent .chat_copy p:after {
  border-color: transparent transparent transparent #CFF09E;
  border-style: solid;
  border-width: 6px;
  left: auto;
  right: -3px;
  -webkit-transform: rotate(-70deg);
  -moz-transform: rotate(-70deg);
}
.chat_msg.msg_recvd .chat_copy p:after {
  border-color: transparent rgb(242, 242, 242) transparent transparent;
}

.chat_msg a {
  color: #1122CC;
}
 
.med.user_pic {
  width: 50px;
/*  height: 50px; */
  border: 1px solid #DFDFDF;
  display: block;
}
.floatleft {
  float:left;
}

.floatright {
  float:right;
}

#inChatBacklinks .ui-btn-inner {
  padding: .6em 30px .6em 10px
}

